--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="likeapp">
 <head>
   <title>Hello, World</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <h1>Hello, <i class="fa fa-globe"></i></h1>
+  <div ng-controller="MyLikeButton">
+    <h1>Huge Button</h1>
+    <button ng-click="likeMe()" class="button round">{{count}} {{manyLikes}}</button>
+  </div>
   
   <script src="js/main.js"></script>
 </body>
